Added weather icon

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <div class="clearfix">
              
               <div class="float-left">
+                <img src="" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
                 <span class="temperature" id="temperature"></span
                 ><span class="units">
                   <a  id="celsius-link">°C</a> 
