--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="clearfix">
              
               <div class="float-left">
-                <img src="" alt="Clear" id="icon" class="float-left" />
+                <img src="" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                 <span class="temperature" id="temperature"></span
                 ><span class="units">
